# food-order-agent

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: agent.yaml
data/: menu.yaml  test_scenarios.yaml
docs/: DESIGN.md
orderbot/llm/: base.py  gemini.py
orderbot/mcp/: client.py
orderbot/models/: intent.py  menu.py  order.py
orderbot/order/: manager.py
orderbot/tools/: declarations.py  executor.py
orderbot/utils/: config.py  logger.py  observability.py
orderbot/voice/: __init__.py  aec.py  audio_capture.py  audio_playback.py  metrics.py  models.py  session.py  stt.py  tts.py  vad.py
prompts/v1/: classify.txt  respond.txt  system.txt
prompts/v2/: system.txt
scripts/: run_eval.py
src/llm/: base.py  gemini.py
src/log/: trace.py
src/models/: order.py
src/order/: manager.py
src/tools/: declarations.py  executor.py
tests/e2e/: test_conversations.py
tests/integration/: test_mcp.py
tests/unit/: test_fallback_response.py  test_intent.py  test_menu_models.py  test_normalize_for_tts.py  test_observability.py  test_order_manager.py  test_sentence_splitter.py  test_tool_executor.py  test_vad.py  test_voice_session.py
